replace tabs with spaces in CueContext and CueKind
Signed-off-by: Aram Hăvărneanu <aram@mgk.ro>